# SimpleAndUgly

./: .gitignore  Cargo.toml  README.md  compose.yml
sso/: Cargo.toml  Dockerfile
sso/src/: app_state.rs  login_middleware.rs  login_system.rs  main.rs  user.rs
sso/src/app/: app_state.rs
sso/src/errors/: apps.rs  auth.rs  login.rs  mod.rs  register.rs  validation.rs
sso/src/forms/: auth.rs
sso/src/objects/: application.rs  config.rs  login_token.rs  mod.rs  registration_token.rs  token.rs  user.rs
sso/src/repos/: applications.rs  login_tokens.rs  mod.rs  register_tokens.rs  users.rs
sso/src/repositories/: applications.rs  mod.rs  tokens.rs  users.rs
sso/src/services/: apps.rs  auth.rs  factory.rs  mod.rs
sso/src/views/: apps.rs  auth.rs  home.rs  mod.rs  nav.rs  users.rs
