[package]
name = "sso"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
derive_more = "2.0.1"
maud = { version = "0.27.0", features = ["actix-web"] }
openidconnect = "4.0.0"
rand = "0.9.0"
rand_distr = "0.5.1"
regex = "1.11.1"
rusqlite = { version = "0.34.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
